# api-portal

./: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DOCKER.md  Dockerfile  LINKS.md  Makefile  README.md  deploy.py  docker-compose.yml  output.txt  package-lock.json  permission_fix.ps1  prod-trust-policy.json  pyproject.toml  samconfig.toml
.aws-sam/: build.toml
.aws-sam/pipeline/: pipelineconfig.toml
.claude/: settings.json  settings.local.json
.claude/agents/: git-workflow.md
.claude/commands/: ai-gather-errors.md  ai-pick-issue.md  ai-ship.md  ai-start-work.md
.github/: BRANCH_PROTECTION.md  dependabot.yaml
.github/workflows/: api-portal-deploy-improvements.yaml  api-portal-deploy.yaml  serverless-gitops.yaml
cloudformation/: template.yaml
dev-portal/public/: index.html
dev-portal/public/custom-content/: styles.css
dev-portal/public/custom-content/content-fragments/: APIs.md  GettingStarted.md  Home.md
environments/: README.md  dev.yaml  prod.yaml
scripts/: check-and-rebuild.js  update-pipeline-permissions.sh
